third_party/move/move-compiler-v2/tests/ability-check/v1-borrow-tests/no_drop.move
module 0x8675309::M {
    struct X {}

    fun t1(): bool {
        let x = X {};
        &x;
        false
    }
}
